<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="?attr/background">

    <com.google.android.material.appbar.AppBarLayout
        android:id="@+id/appBarLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <com.google.android.material.appbar.MaterialToolbar
            style="@style/Widget.MaterialComponents.Toolbar.Primary"
            android:id="@+id/materialToolbar"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            android:elevation="0dp"
            app:title="@string/M40_title"
            app:titleCentered="true"
            app:subtitle="@string/M40_sub_title"
            app:subtitleCentered="true"
            app:navigationIcon="@drawable/ic_baseline_menu_24"
            app:navigationContentDescription="@string/menu" />

    </com.google.android.material.appbar.AppBarLayout>

    <RelativeLayout
        android:id="@+id/layout_body"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@id/appBarLayout">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="130dp"
                android:orientation="horizontal"
                android:weightSum="2">

                <com.google.android.material.button.MaterialButton
                    android:id="@+id/btn_Fabric_Receiving"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_marginRight="5dp"
                    android:layout_weight="1"
                    android:text="@string/M41_btn_title"
                    android:textSize="@dimen/menu_btn_size"
                    app:shapeAppearance="@style/ShapeAppearance.App.SmallComponent"
                    app:elevation="@dimen/el_5dp" />

                <com.google.android.material.button.MaterialButton
                    android:id="@+id/btn_Fabric_Input"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_marginLeft="5dp"
                    android:layout_weight="1"
                    android:text="@string/M42_btn_title"
                    android:textSize="@dimen/menu_btn_size"
                    app:shapeAppearance="@style/ShapeAppearance.App.SmallComponent"
                    app:elevation="@dimen/el_5dp" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="130dp"
                android:orientation="horizontal"
                android:weightSum="2">
                <com.google.android.material.button.MaterialButton
                    android:id="@+id/btn_Fabric_Inventory_status"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_marginRight="5dp"
                    android:layout_weight="1"
                    android:text="@string/M43_btn_title"
                    android:textSize="@dimen/menu_btn_size"
                    app:shapeAppearance="@style/ShapeAppearance.App.SmallComponent"
                    app:elevation="@dimen/el_5dp" />

                <com.google.android.material.button.MaterialButton
                    android:id="@+id/btn_Fabric_Success"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_marginLeft="5dp"
                    android:layout_weight="1"
                    android:text="@string/M44_btn_title"
                    android:textSize="@dimen/menu_btn_size"
                    app:shapeAppearance="@style/ShapeAppearance.App.SmallComponent"
                    app:elevation="@dimen/el_5dp"/>

            </LinearLayout>

        </LinearLayout>

    </RelativeLayout>

    <!--
    <com.google.android.material.floatingactionbutton.ExtendedFloatingActionButton
        android:id="@+id/btn_menu"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom|right"
        android:layout_margin="16dp"
        android:text="@string/extend_fab_menu"
        app:icon="@drawable/ic_baseline_menu_24" />
    -->

    <!--
    <RelativeLayout
        android:id="@+id/layout_btn"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_margin="10dp">

        <Button
            android:id="@+id/btn_menu"
            android:layout_width="150dp"
            android:layout_height="50dp"
            android:layout_alignParentLeft="true"
            android:background="@drawable/bg_toggle"
            android:gravity="center"
            android:text="메뉴"
            android:textAlignment="center"
            android:textColor="@android:color/white"
            android:textSize="20dp" />

    </RelativeLayout>
    -->

</androidx.coordinatorlayout.widget.CoordinatorLayout>
